--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   provider: ^6.1.5+1
+  path_provider: ^2.1.2
+  csv: ^5.0.2
+  pdf: ^3.10.7
+  printing: ^5.12.0
+  shared_preferences: ^2.1.1
 
 dev_dependencies:
   flutter_test:
