--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   pdf: ^3.10.7
   printing: ^5.12.0
   shared_preferences: ^2.1.1
+  share_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
